	* Any invalid color codes are printed
* Added new cl_system_font cvar - it controls the system font. If you set it to an invalid value, it resets to the default.
* Changed "say" and "say_team" messages to "Chat: " and "Chat (Team): " and made them green and blue respectively.
* Removed already dead CTRL and ALT bindings from default.cfg.

Version 0.04-pre4
February 10, 2024
* Fix TDM end screen not displaying.
* Push zombies away if they hit a player while being spawned. This should prevent players from being trapped by zombies.
* Reset the state of all active UIs on connect and disconnect (should at least mitigate "stuck UI" bugs)
* Directors killing zombies don't get frags anymore. Players killing zombies have a separate score tallied up for that. Not sure what to do with this rn... Directors killing zombies lose that score.
* Fixed a bug where, on team change, weapons were not being visually indicated.
* Very rough implementation of primary and secondary attack (presently, only attack functions and state are separated, animations and reload time aren't)
	* Renamed +attack to +attack1
	* Added +attack2
* Bamfuslicator now allows changing which zombie type to spawn.
	* Use right click to do this.
* Removed right click to strafe (and therefore +strafe binding).
* Removed by default CTRL to shoot.
* Capitalised binding names.
* Properly lit and textured z_tdm_subway, and added many new details.
* Redesigned textures for z_tdm_labrats. They suck.
* Rewrote the way the game version number is handled and drawn.
* Added cl_drawhud: It determines if UI is drawn.
* Removed scr_printspeed - it was dummied out and obsolete
* Implemented very rough versions of new enemy types that can be spawned with the Planfuslicator:
	* Fast Zombies: Zombies that wander around randomly and move twice as fast, in a char
	* Ogres: They will have a range attack in the future and move slowly. The Shrek voice lins are temporary.
* Added gender option in player setup menu.

Version 0.04-pre3